# rates_risk_lib

./: .gitattributes  .gitignore  CHANGELOG.md  CHECKLIST_ASSESSMENT.md  COMPREHENSIVE_REVIEW_SUMMARY.txt  DASHBOARD_BEFORE_AFTER.md  DASHBOARD_ENHANCEMENTS.md  DASHBOARD_FINAL_ASSESSMENT.md  DELIVERABLES.md  HIRING_MANAGER_REVIEW.md  IMPLEMENTATION_REVIEW.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION.md  MODEL_VALIDATION.md  README.md  Rates_Risk_Library_20min_Transcript.md  documentation.tex  pyproject.toml
.github/workflows/: ci.yml
dashboard/: FEATURES.md  QUICKSTART.md  README.md  app.py  interactive_dashboard.py  launch_interactive.bat  launch_interactive.sh  requirements.txt  requirements_interactive.txt
data/: vol_quotes.csv
data/sample_book/: bonds.csv  options.csv  positions.csv  positions_v2.csv  swaps.csv
data/sample_quotes/: futures_quotes.csv  historical_rates.csv  ois_quotes.csv  treasury_quotes.csv
docs/: API_REFERENCE.md
output/: Sample_Trading_Book_20240115_Key_Rate_DV01.csv  Sample_Trading_Book_20240115_Portfolio_Summary.csv  Sample_Trading_Book_20240115_Position_Details.csv  Sample_Trading_Book_20240115_Scenario_Analysis.csv  Sample_Trading_Book_20240115_Value_at_Risk.csv
output_smoketest/: Sample_Trading_Book_20240115_Key_Rate_DV01.csv  Sample_Trading_Book_20240115_Portfolio_Summary.csv
output_smoketest_api/: Sample_Trading_Book_20240115_Model_Parameters.csv  Sample_Trading_Book_20240115_Position_Details.csv  Sample_Trading_Book_20240115_SABR_Buckets.csv  Sample_Trading_Book_20240115_Scenario_Analysis.csv  Sample_Trading_Book_20240115_Value_at_Risk.csv  Sample_Trading_Book_20240115_metadata.csv
rateslib_smoke_5her2toj/: smoke_20240115_Positions.csv  smoke_20240115_Summary.csv  smoke_20240115_metadata.csv
scripts/: debug_implied_vol.py  debug_types.py  run_comprehensive_demo.py  run_demo.py  run_sabr_demo.py
src/rates_risk/: __init__.py  market_state.py
src/rates_risk/curves/: __init__.py  bootstrap.py  curve.py  instruments.py  interpolation.py
src/rates_risk/liquidity/: __init__.py
src/rates_risk/options/: __init__.py  caplet.py
src/rates_risk/portfolio/: __init__.py  builders.py
src/rates_risk/pricers/: __init__.py  dispatcher.py
src/rates_risk/reporting/: __init__.py  risk_report.py
src/rates_risk/risk/: __init__.py  keyrate.py  limits.py  reporting.py  sensitivities.py
src/rates_risk/var/: historical.py  monte_carlo.py  scenarios.py  stress.py
src/rates_risk/vol/: __init__.py  calibration.py  sabr.py  sabr_surface.py
src/rateslib/: __init__.py  calendars.py  conventions.py  dates.py  domain.py  market_conventions.py  market_state.py
src/rateslib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_calendars.py  test_conventions.py  test_curves.py  test_dashboard_shiny.py  test_dashboard_streamlit.py  test_dates.py  test_domain.py  test_limit_reporting.py  test_market_conventions.py  test_market_state.py  test_options.py  test_portfolio_builders.py  test_pricers.py  test_reporting_engines.py  test_risk.py  test_sabr.py  test_sabr_risk_conventions.py  test_var.py
(+35 files in other folders)
