[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rates-risk-lib"
version = "0.1.0"
description = "USD Yield Curve Construction & Risk Analytics Library for Fixed-Income Trading"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Rates Desk Analytics"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24.0,<3",
    "pandas>=2.0.0,<3",
    "scipy>=1.10.0,<2",
    "pyyaml>=6.0,<7",
]

[project.urls]
Repository = "https://github.com/7josh7/rates_risk_lib"
Issues = "https://github.com/7josh7/rates_risk_lib/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "build>=1.2.0",
    "ruff>=0.6.0",
]
dashboard = [
    "matplotlib>=3.7.0,<4",
    "plotly>=5.18.0",
    "shiny>=0.6.0",
    "shinywidgets>=0.3.0",
    "streamlit>=1.28.0",
]
all = [
    "matplotlib>=3.7.0,<4",
    "plotly>=5.18.0",
    "shiny>=0.6.0",
    "shinywidgets>=0.3.0",
    "streamlit>=1.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
branch = true
source = ["rates_risk"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
